! Sync to SMF 10503  ! r10498 Fix the header bar in reports area to be category rather than title. (Reports.template.php) (SMF rev also changed Admin template, this was already done in Wedge)  ! r10499 Fix to stop linktree anchors scrunching in IE6 and IE7. (index.css) [Bug 4651]
! Not including
 ! r10500 Making category titles not into links if they're not collapsible - in our case, the category header wasn't even a link to start with.
 ! r10501 CSS change for layout related bug on collapsed categories - bug doesn't affect us as far as I can tell or reproduce (see bug 4639)
 ! r10502 Renaming 'Packages' to 'Package Manager' just for consistency in the menu (this was a reported bug!)... well, they're not called packages here...
 ! r10503 Restructuring the size of dl items in the admin panel just because it throws scrollbars when using the existing sidebar on sub 1024 wide screens... no thanks. (The dl becomes 25% wide and the dt 71% wide...)

! Other
 ! Fix category links to point to #category_n instead of #cn because the category title anchor no longer exists. (Load.php, Recent.php, Search2.php, Unread.php, Unreadreplies.php, ModerationCenter.template.php) (Replaces SMF r10500 only done so much nicer)

--- a/Themes/default/styles/index.css
+++ b/Themes/default/styles/index.css
@@ -182,6 +182,7 @@ ul#noava
 	padding: 0 0 1.5em
 	a
 		color: #963
+		white-space: pre
 	ul
 		padding: 0 5px
 		margin: 0 15px
